Add Install instruction to CMakeList in order to do colcon build correctly in AWS RoboMaker. Also add position_controller as depend in package.xml

--- a/minibot_gazebo/CMakeLists.txt
+++ b/minibot_gazebo/CMakeLists.txt
@@ -181,6 +181,12 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
+## Mark other folders (e.g. launch and world folder)
+install(DIRECTORY launch world
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+
 #############
 ## Testing ##
 #############
