Add launch files and update CMakeList for deploying from RoboMaker

--- a/subscriber_mini_bot/CMakeLists.txt
+++ b/subscriber_mini_bot/CMakeLists.txt
@@ -193,6 +193,7 @@ install(TARGETS planned_path_client
 ## Mark other folders (e.g. launch and world folder)
 install(DIRECTORY 
   config
+  launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
