--- a/minibot_control/package.xml
+++ b/minibot_control/package.xml
@@ -58,6 +58,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>industrial_msgs</build_depend>
 
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>joint_state_controller</build_export_depend>
@@ -66,6 +68,8 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>industrial_msgs</build_export_depend>
 
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
@@ -74,6 +78,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>industrial_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
