Update CMakeList (minibot_gazebo, minibot_support)

--- a/minibot_gazebo/CMakeLists.txt
+++ b/minibot_gazebo/CMakeLists.txt
@@ -182,7 +182,7 @@ include_directories(
 # )
 
 ## Mark other folders (e.g. launch and world folder)
-install(DIRECTORY launch world
+install(DIRECTORY launch world config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
